[project]
name = "traffic-light-env"
version = "1.0.0"
description = "Traffic Light RL OpenEnv API"
authors = [{name = "Your Name"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
